@@ -1,3 +1,7 @@
+2001-09-18   Andreas Schlapbach  <schlpbch@kde.org>
+
+	* Interpreter.java (getLanguages):  New static method.
+
 2001-09-15  Per Bothner  <per@bothner.com>
 
 	Fix bug reported by Jocelyn Paine in returning #!null.
